[gd_scene load_steps=4 format=3 uid="uid://brln63l3y5sfa"]

[ext_resource type="Script" path="res://UI/menu/map/cave-ui.gd" id="1_t1jsl"]
[ext_resource type="Theme" uid="uid://bat77wlh5fhmk" path="res://assets/UI/themes/UI-elements/menu.tres" id="2_ao20v"]
[ext_resource type="Theme" uid="uid://dq788m3px4i4p" path="res://assets/UI/themes/UI-elements/button-no-styling.tres" id="3_6ca5i"]

[node name="CaveUI" type="Control"]
custom_minimum_size = Vector2(1400, 600)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 1
script = ExtResource("1_t1jsl")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme = ExtResource("2_ao20v")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 100

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="CaveContainer" type="Node2D" parent="PanelContainer/MarginContainer/ScrollContainer"]

[node name="Button" type="Button" parent="PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("3_6ca5i")
flat = true

[connection signal="button_down" from="PanelContainer/MarginContainer/Button" to="." method="_on_button_button_down"]
[connection signal="button_up" from="PanelContainer/MarginContainer/Button" to="." method="_on_button_button_up"]
[connection signal="gui_input" from="PanelContainer/MarginContainer/Button" to="." method="_on_button_gui_input"]
[connection signal="mouse_entered" from="PanelContainer/MarginContainer/Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="PanelContainer/MarginContainer/Button" to="." method="_on_button_mouse_exited"]
